--- a/src/style.css
+++ b/src/style.css
@@ -11,25 +11,29 @@
     margin: 0;
     overflow-x: hidden;
 }
-.section-padding{
+
+.section-padding {
     padding: 4.625rem 15% 1% 15%;
 }
+
 @media only screen and (max-width: 1400px) {
     .section-padding {
         padding: 4.625rem 5% 1% 5%;
-  }
+    }
 }
-.back-title{
-    font-size: calc(1.95rem + 5vw) ;
-    font-weight: 700; 
+
+.back-title {
+    font-size: calc(1.95rem + 5vw);
+    font-weight: 700;
 }
+
 .title {
     color: white;
     position: absolute;
     left: 0;
     right: 0;
     margin: auto;
-    font-size: calc(1rem + 2vw) ;
+    font-size: calc(1rem + 2vw);
     width: fit-content;
 }
 
@@ -44,23 +48,28 @@
     left: 0;
     right: 0;
 }
+
 .title-div {
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-.title-2{
+
+.title-2 {
     color: white;
     font-size: 1.25rem;
     font-weight: 600;
 }
-.title-2 span{
+
+.title-2 span {
     float: right;
 }
-.title-3{
+
+.title-3 {
     color: #1EAE84;
 }
+
 /* Nav-Bar */
 .my-navbar-brand {
     font-family: 'Poppins', sans-serif;
@@ -99,6 +108,7 @@
 .my-nav-icon.active {
     color: white !important;
 }
+
 .my-nav-bar .nav-link.facebook:hover {
     color: #4267B2 !important;
     opacity: 1 !important;
@@ -117,6 +127,7 @@
     opacity: 1 !important;
     filter: blur(0) !important;
 }
+
 /* HomePage */
 .my-home-page {
     text-align: center;
@@ -177,37 +188,40 @@
 
 /*About Page */
 .my-about-page .back-title {
-    color: #292D32 ;
+    color: #292D32;
 }
 
 .my-about-page {
-    background-color: #212529;  
+    background-color: #212529;
 }
 
 .my-about-page .desc-title {
     color: white;
     font-size: 1.5rem;
-   
+
 }
+
 .my-about-page .desc-title span {
-    color: #20C896; 
+    color: #20C896;
 }
+
 .my-about-page .desc-text {
     color: #909294;
     font-size: 1rem;
     width: 83%;
 }
+
 @media only screen and (max-width: 992px) {
     .my-about-page .desc-title {
         text-align: center;
-        
+
     }
-    
+
     .my-about-page .desc-text {
-       text-align: center;
-       width: 100%;
+        text-align: center;
+        width: 100%;
     }
-  }
+}
 
 .my-about-page a {
     text-decoration: none;
@@ -236,6 +250,7 @@
     font-weight: 500;
     padding: 0.8rem 3rem;
 }
+
 .my-about-page .stats-title {
     color: #909294;
     font-size: 2.5rem;
@@ -246,7 +261,7 @@
     color: white;
 }
 
-.my-about-page .my-info{
+.my-about-page .my-info {
     color: white;
     font-size: 1rem;
     border: 0.1rem solid #90929472;
@@ -262,37 +277,44 @@
     border: solid #90929472;
     border-width: 0 0.1rem 0 0;
 }
+
 .my-about-page .stats-2 {
     text-align: center;
     border: solid #90929472;
-   border-width: 0 0.1rem 0 0;
+    border-width: 0 0.1rem 0 0;
 }
+
 .my-about-page .stats-3 {
     text-align: center;
     border: solid #90929472;
-   border-width: 0 0.1rem 0 0;
+    border-width: 0 0.1rem 0 0;
 }
+
 .my-about-page .stats-4 {
-  border: none;
-  text-align: center;
+    border: none;
+    text-align: center;
 }
+
 @media only screen and (max-width: 992px) {
     .my-about-page .stats-1 {
         border: solid #90929472;
         border-width: 0 0.1rem 0.1rem 0;
     }
+
     .my-about-page .stats-2 {
         border: solid #90929472;
         border-width: 0 0 0.1rem 0;
     }
+
     .my-about-page .stats-3 {
         border: solid #90929472;
         border-width: 0 0.1rem 0 0;
     }
+
     .my-about-page .stats-4 {
         border: none;
     }
-  }
+}
 
 /* Services */
 .my-services-page .back-title {
@@ -302,7 +324,8 @@
 .my-services-page {
     background-color: #343A40;
 }
-.my-services-page .services-icon{
+
+.my-services-page .services-icon {
     font-size: 5rem;
     background-color: #212529;
     color: #20C896;
@@ -311,58 +334,67 @@
     float: left;
     margin-right: 1rem;
 }
-.my-services-page .service-title{
+
+.my-services-page .service-title {
     text-align: start;
     color: white;
     font-size: 1.25rem;
     margin-bottom: 0.5rem;
 }
 
-.my-services-page .service-desc{
+.my-services-page .service-desc {
     color: #9A9DA0;
     text-align: start;
     overflow: hidden;
     font-size: 1rem;
 }
+
 /* Summary */
-.my-summary-page{
+.my-summary-page {
     background-color: #212529;
 }
-.my-summary-page .back-title{
-    color:#292D32;
+
+.my-summary-page .back-title {
+    color: #292D32;
 }
-.summary-card{
+
+.summary-card {
     background-color: #111418;
     padding-bottom: 0.5rem !important;
 }
-.summary-date{
+
+.summary-date {
     color: white;
     background-color: #20C997;
     width: fit-content;
-    padding: 0.3rem 0.5rem ;
+    padding: 0.3rem 0.5rem;
     font-size: 0.9rem;
     line-height: 100%;
 }
-.summary-desc{
+
+.summary-desc {
     color: #888A8C;
 }
 
-.skill-div{
+.skill-div {
     width: 100%;
 }
-.my-progess-bar{
-  background-color: #111418 ;
-  height: 0.5rem;
+
+.my-progess-bar {
+    background-color: #111418;
+    height: 0.5rem;
 }
-.my-progess-bar .progress-bar{
+
+.my-progess-bar .progress-bar {
     background-color: #1EAE84;
 }
+
 .my-summary-page .btn {
     width: fit-content;
     font-size: 1rem;
     background-color: rgba(0, 0, 0, 0);
     border: 0.15rem solid rgba(255, 255, 255, 0.381);
-    color:rgba(255, 255, 255, 0.381);
+    color: rgba(255, 255, 255, 0.381);
     font-weight: 500;
     padding: 0.8rem 3rem;
 }
@@ -378,36 +410,41 @@
 }
 
 /* back-to-top */
-.back-to-top{
-    background-color: #1114186b ;
+.back-to-top {
+    background-color: #1114186b;
     position: fixed;
     bottom: 0;
     right: 0;
     border: 0;
 }
-.back-to-top:hover{
-    background-color: #1EAE84 ;
+
+.back-to-top:hover {
+    background-color: #1EAE84;
 }
 
 
 /* Portfolio */
 
-.my-portfolio-page{
-   background-color: #343A40;
-   
+.my-portfolio-page {
+    background-color: #343A40;
+
 }
+
 .my-portfolio-page .back-title {
-    color: #3A4046 ;
+    color: #3A4046;
 }
+
 .gallery-nav-link {
     color: white;
-    
+
     position: relative;
 }
+
 .gallery-nav-link.active {
     color: #20C997;
 
 }
+
 .gallery-nav-link:hover {
     color: #20C997;
 }
@@ -423,68 +460,82 @@
     left: 0;
     right: 0;
 }
+
 @keyframes comeIn {
-    0% { transform: scale(0) }
-    75% { transform: scale(1.03) }
-    100% { transform: scale(1) }
+    0% {
+        transform: scale(0)
+    }
+
+    75% {
+        transform: scale(1.03)
+    }
+
+    100% {
+        transform: scale(1)
+    }
 }
 
 .xmasonry .xblock {
     animation: comeIn ease 0.5s;
     animation-iteration-count: 1;
     transition: left .3s ease, top .3s ease;
-   
+
 }
-.gallery-div{
+
+.gallery-div {
     margin: 1rem;
-    
+
 }
+
 .project-card {
     perspective: 1000px;
-  }
-  
-  .project-card .card-content {
+}
+
+.project-card .card-content {
     position: relative;
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
     transition: transform 0.5s;
-  }
-  
-  .project-card .card-front,
-  .project-card .card-back {
+}
+
+.project-card .card-front,
+.project-card .card-back {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-  }
-  
-  .project-card .card-back {
+}
+
+.project-card .card-back {
     transform: rotateY(180deg);
-  }
-  
-  .project-card.flipped .card-content {
+}
+
+.project-card.flipped .card-content {
     transform: rotateY(180deg);
-  }
-  
+}
+
 /* Testimonial */
-.my-testimonial-page{
-background-color: #212529;
+.my-testimonial-page {
+    background-color: #212529;
 
 }
-.my-testimonial-page .back-title{
-  color: #292D32;
+
+.my-testimonial-page .back-title {
+    color: #292D32;
 }
-.my-slider-inner-div{
+
+.my-slider-inner-div {
     background-color: #111418;
     height: fit-content;
     border-radius: 1rem;
-    padding:3rem;
-    margin:1rem;
+    padding: 3rem;
+    margin: 1rem;
 }
-.my-slider-inner-div img{
+
+.my-slider-inner-div img {
     border-radius: 50%;
     height: 4rem;
     width: 4rem;
@@ -494,52 +545,62 @@ background-color: #212529;
     margin-right: 1rem;
     margin-bottom: 1rem;
 }
-.slider-name{
+
+.slider-name {
     color: white;
     font-size: 1rem;
     margin-bottom: 0.5rem;
     font-weight: 600;
 }
-.slider-location{
+
+.slider-location {
     color: #6C757D;
 }
-.slider-desc{
+
+.slider-desc {
     margin-top: 3rem;
     color: white;
     font-size: 1rem;
 }
-.my-slider-inner-div svg{
-    color:yellow;
+
+.my-slider-inner-div svg {
+    color: yellow;
 }
-.slick-dots li button:before{
+
+.slick-dots li button:before {
     color: #000000 !important;
     font-size: 1rem !important;
-   
+
 }
-.slick-dots li.slick-active button:before{
+
+.slick-dots li.slick-active button:before {
     color: #1EAE84 !important;
-   font-size: 1rem;
-  
+    font-size: 1rem;
+
 }
 
 /* Contact */
-.my-contact-page{
+.my-contact-page {
     background-color: #343A40;
     padding-bottom: 6%;
 }
+
 .my-contact-page .back-title {
-    color:#3A4046;
+    color: #3A4046;
 }
-.my-form-control{
+
+.my-form-control {
     background-color: #232A31;
     border: 0;
 }
-.my-form-control:focus{
+
+.my-form-control:focus {
     background-color: #232A31;
     border: 0;
     color: white;
-    box-shadow: 0 0 1rem #20C997 ;
+    box-shadow: 0 0 1rem #20C997;
 }
+
 .my-contact-page .btn {
     width: fit-content;
     font-size: 1rem;
@@ -553,181 +614,205 @@ background-color: #212529;
     background-color: #0b443384;
 }
 
-.contacts-desc{
+.contacts-desc {
     color: white;
     font-size: 1rem;
     text-align: left;
     overflow: hidden;
-    
+
 }
-.green-icon{
+
+.green-icon {
     color: #20C896;
     float: left;
-    margin-right: 0.5rem; 
+    margin-right: 0.5rem;
 }
-.contacts-desc span{
+
+.contacts-desc span {
     font-size: 0.8rem;
-    
-}
-.facebook-icon{
 
-    color: rgba(255, 255, 255, 0.314);
-margin-right: 0.5rem;
-}
-.facebook-icon:hover{
- color: #4267B2;
-  
 }
 
-.github-icon{
+.facebook-icon {
+
     color: rgba(255, 255, 255, 0.314);
-   margin: 0 0.5rem;
+    margin-right: 0.5rem;
 }
-.github-icon:hover{
+
+.facebook-icon:hover {
+    color: #4267B2;
+
+}
+
+.github-icon {
+    color: rgba(255, 255, 255, 0.314);
+    margin: 0 0.5rem;
+}
+
+.github-icon:hover {
     color: #a5a2a2;
 }
-.instagram-icon{
+
+.instagram-icon {
     color: rgba(255, 255, 255, 0.314);
     margin: 0 0.5rem;
 }
-.instagram-icon:hover{
+
+.instagram-icon:hover {
     color: white;
-    background: #f09433; 
-    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
-    background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+    background: #f09433;
+    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    background: -webkit-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f09433', endColorstr='#bc1888', GradientType=1);
     border-radius: 0.5rem;
 }
-.linkedin-icon{
+
+.linkedin-icon {
     color: rgba(255, 255, 255, 0.314);
     margin: 0 0.5rem;
 }
-.linkedin-icon:hover{
- color: #4267B2;   
+
+.linkedin-icon:hover {
+    color: #4267B2;
 }
+
 @media only screen and (max-width: 768px) {
-    .contacts{
+    .contacts {
         text-align: center;
     }
-    .contacts-div{
+
+    .contacts-div {
         display: flex;
         justify-content: center;
     }
-    .contacts-desc{
-        
-       width: fit-content;
+
+    .contacts-desc {
+
+        width: fit-content;
     }
-    .linkedin-icon{
+
+    .linkedin-icon {
         margin: 0 0 0 0.5rem;
     }
 }
 
 /* Footer */
-.footer{
+.footer {
     background-color: #212529;
     padding-top: 3%;
     padding-bottom: 3%;
 }
-.footer-text{
+
+.footer-text {
     color: white;
-    font-size: 1rem;  
+    font-size: 1rem;
 }
-.footer-text span{
+
+.footer-text span {
     color: #1BAA80;
 }
-.footer-nav{
+
+.footer-nav {
     justify-content: end;
 }
+
 @media only screen and (max-width: 768px) {
-    .footer-nav{
+    .footer-nav {
         justify-content: center;
     }
-    .footer-text{
+
+    .footer-text {
         text-align: center;
     }
-    .footer{
-        
+
+    .footer {
+
         padding-top: 10%;
         padding-bottom: 10%;
     }
 }
+
 .footer-nav a {
-    color: white ;
+    color: white;
 }
+
 .footer-nav a:hover {
-    color: #1BAA80 ;
+    color: #1BAA80;
 }
-.footer-link-1{
+
+.footer-link-1 {
     border-right: 0.1rem solid rgba(0, 0, 0, 0.233);
-    
+
 }
 
 /*Loader*/
 
 .loader-background {
-     background: #0dc5c1;
-     width: 100vw;
-     height: 100vh;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     z-index: 1000;
-     }
+    background: linear-gradient(rgba(0, 0, 0, 0.365), black);
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .loader {
-  overflow: hidden;
-  font-size: 10px;
-  text-indent: -9999em;
-  width: 11em;
-  height: 11em;
-  border-radius: 50%;
-  background: #FFF;
-  background: linear-gradient(to right, #FFF 10%, rgba(255, 255, 255, 0) 42%);
-  position: relative;
-  animation: load3 1.4s infinite linear;
-  transform: translateZ(0);
-
-  &:before {
-    width: 50%;
-    height: 50%;
-    background: #FFF;
-    border-radius: 100% 0 0 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: '';
-  }
-
-  &:after {
-    background: #0dc5c1;
-    width: 75%;
-    height: 75%;
+    overflow: hidden;
+    font-size: 10px;
+    text-indent: -9999em;
+    width: 11em;
+    height: 11em;
     border-radius: 50%;
-    content: '';
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    opacity: 0.5;
-  }
+    background: #FFF;
+    background: linear-gradient(to right, #FFF 10%, rgba(255, 255, 255, 0) 42%);
+    position: relative;
+    animation: load3 1.4s infinite linear;
+    transform: translateZ(0);
+
+    &:before {
+        width: 50%;
+        height: 50%;
+        background: #FFF;
+        border-radius: 100% 0 0 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: '';
+    }
+
+    &:after {
+        background: #0dc5c1;
+        width: 75%;
+        height: 75%;
+        border-radius: 50%;
+        content: '';
+        margin: auto;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        opacity: 0.5;
+    }
 }
 
 @-webkit-keyframes load3 {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 @keyframes load3 {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
